--- a/templates/index.html
+++ b/templates/index.html
@@ -6,5 +6,20 @@
 
 {% block main %}
 
-    <h1>hello, World!</h1>
+    <h1 class="mb-5">Recetas</h1>
+    <section class="container-fluid">
+        <div class="row">
+
+            <div class="col-sm-3 mb-3">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title mb-3">Tarta de espinaca</h5>
+                  <a href="#" class="btn btn-primary">Receta</a>
+                </div>
+              </div>
+            </div>
+            
+        </div>
+    </section>
+
 {% endblock %}
