Add recipe viewer

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,12 +11,15 @@
         <div class="row">
             {% for row in rows %}
                 <div class="col-sm-3 mb-3">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title mb-3">{{ row["name"] }}</h5>
-                        <a href="#" class="btn btn-primary">Receta</a>
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title mb-3">{{ row["name"] }}</h5>
+                            <form action="/" method="post">
+                                <input name="id" type="hidden" value="{{ row['id'] }}">
+                                <button type="submit" class="btn btn-primary">Receta</button>
+                            </form>
+                        </div>
                     </div>
-                </div>
                 </div>
             {% endfor %}
         </div>
