--- a/templates/new_recipe.html
+++ b/templates/new_recipe.html
@@ -10,7 +10,7 @@
         
             <div class="mb-3">
               <label for="recipe_name" class="form-label">Recipe name</label>
-              <input type="text" class="form-control" id="recipe_name" name="recipe_name">
+              <input autofocus type="text" class="form-control" id="recipe_name" name="recipe_name">
             </div>
             <div class="mb-3">
               <label for="recipe_instructions" class="form-label">Instructions</label>
