Add ing to new_recipe, create search

--- a/static/styles.css
+++ b/static/styles.css
@@ -7,6 +7,10 @@ body {
     background-color: cornflowerblue;
 }
 
+nav {
+    background-color: darkseagreen;
+}
+
 
 footer {
     background-color: orange;
