--- a/templates/result.html
+++ b/templates/result.html
@@ -5,5 +5,9 @@
 {% endblock %}
 
 {% block main %}
-    <h1>{{msg}}</h1>
+    <h1 class="text-center">{{msg}}</h1>
+{% endblock %}
+
+{% block script %}
+
 {% endblock %}
