--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,12 @@
 
 {% block main %}
 
-    <h1 class="mb-5">Recetas</h1>
-    <section class="container-fluid">
+    <h1 class="mb-5 text-center">Recetas</h1>
+
+    <section class="container-fluid text-center">
         <div class="row">
             {% for row in rows %}
-                <div class="col-sm-3 mb-3">
+                <div class="col-md-3 my-3">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title mb-3">{{ row["name"] }}</h5>
@@ -24,5 +25,9 @@
             {% endfor %}
         </div>
     </section>
+
+{% endblock %}
+
+{% block script %}
 
 {% endblock %}
