--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,6 +10,8 @@
         <!-- http://getbootstrap.com/docs/5.3/ -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <!-- Bootstrap icons -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
         <!--Source: https://www.flaticon.com/free-icons/nutrition - Nutrition icons created by Roundicons Premium - Flaticon-->
         <link href="/static/favicon.ico" rel="icon" title="nutrition icon">
@@ -31,7 +33,7 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav me-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/new_recipe">New recipe</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/buy">Buy</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/search">Search</a></li>
                         <li class="nav-item"><a class="nav-link" href="/sell">Sell</a></li>
                         <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
                         <li class="nav-item"><a class="nav-link" href="/addcash">Add Cash</a></li>
@@ -40,7 +42,7 @@
             </div>
         </nav>
 
-        <main class="container py-5 text-center">
+        <main class="container py-5">
             {% block main %}{% endblock %}
         </main>
 
@@ -52,6 +54,9 @@
 
         </footer>
 
+        {% block script %}
+
+        {% endblock %}
     </body>
 
 </html>
