--- a/templates/new_recipe.html
+++ b/templates/new_recipe.html
@@ -1,22 +1,102 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    New recipe
+New recipe
 {% endblock %}
 
 {% block main %}
-<h3 class="pb-5">New recipe</h3>
-    <form action="/new_recipe" method="post">
-        
-            <div class="mb-3">
-              <label for="recipe_name" class="form-label">Recipe name</label>
-              <input autofocus type="text" class="form-control" id="recipe_name" name="recipe_name">
+<div class="container-fluid">
+    <h3 class="pb-3">New recipe</h3>
+    <form action="/new_recipe" method="post" class="mb-4">
+
+        <div class="mb-3">
+            <label for="recipe_name" class="form-label">Recipe name</label>
+            <input autofocus type="text" class="form-control" id="recipe_name" name="recipe_name">
+        </div>
+
+        <p class="form-label">Ingredients</p>
+
+        <div class="row mb-3">
+            <div class="col-auto mb-2">
+                <label class="visually-hidden" for="autoSizingInput">Quantity</label>
+                <input type="number" class="form-control" id="quantity" placeholder="Cantidad" name="quantity_1">
             </div>
-            <div class="mb-3">
-              <label for="recipe_instructions" class="form-label">Instructions</label>
-              <input type="text" class="form-control" id="recipe_instructions" name="recipe_instructions">
+            <div class="col-auto mb-2">
+                <label class="visually-hidden" for="autoSizingSelect1">Unit</label>
+                <select class="form-select" id="autoSizingSelect1" name="unit_1">
+                    <option selected>Choose unit</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
             </div>
-            <button type="submit" class="btn btn-primary">Create</button>
-          
+            <div class="col-auto mb-2">
+                <label class="visually-hidden" for="autoSizingSelect2">Ingredient</label>
+                <select class="form-select" id="autoSizingSelect2" name="ingredient_1">
+                    <option selected>Choose ingredient</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
+            </div>
+            <div class="col-auto mb-2">
+                <button class="btn btn-secondary fw-bolder fs-6"><i class="bi bi-plus-square"></i></button>
+            </div>
+
+        </div>
+
+        <div class="mb-3">
+            <label for="recipe_instructions" class="form-label">Instructions</label>
+            <textarea rows="7" class="form-control" id="recipe_instructions" name="recipe_instructions"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Create</button>
+
     </form>
+
+    <!-- Add ingredients and units -->
+    <h4>Falta algún ingrediente o una unidad?</h4>
+
+    <form action="/new_recipe" method="post">
+        <div class="row mb-3 align-items-start">
+            <label for="new_ing" class="col-sm-2 col-form-label mb-2">Nuevo ingrediente</label>
+            <div class="col-sm-6">
+                <input type="text" class="form-control mb-2" id="new_ing" name="new_ing">
+            </div>
+            <div class="col-auto">
+                <button class="btn btn-warning mb-2">Agregar</button>
+            </div>
+        </div>
+    </form>
+
+    <form action="/new_recipe" method="post">
+        <div class="row mb-3 align-items-start">
+            <label for="new_unit" class="col-sm-2 col-form-label mb-2">Nueva unidad</label>
+            <div class="col-sm-6">
+                <input type="text" class="form-control  mb-2" id="new_unit" name="new_unit">
+            </div>
+            <div class="col-auto">
+                <button class="btn btn-warning mb-2">Agregar</button>
+            </div>
+        </div>
+    </form>
+
+</div>
+
+
+
+
+{% endblock %}
+
+{% block script %}
+
+<!-- <script>
+    document.addEventListener('DOMContentLoaded', function() {
+        document.querySelector('button i').addEventListener('click', function() {
+            
+                });
+            });
+    
+
+</script> -->
+
 {% endblock %}
