--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -18,6 +18,16 @@
     <h3>Instrucciones</h3>
     <p>{{ recipe[0]["instructions"] }}</p>
 
+    <form action="/edit_recipe" method="get" class="mb-3">
+        <input name="id" type="hidden" value="{{ recipe[0]['id'] }}">
+        <button type="submit" class="btn btn-info"><i class="bi bi-pencil"></i> Editar</button>
+    </form>
+
+    <form action="/delete_recipe" method="get" class="mb-3">
+        <input name="id" type="hidden" value="{{ recipe[0]['id'] }}">
+        <button type="submit" class="btn btn-danger"><i class="bi bi-trash"></i> Eliminar</button>
+    </form>
+
 {% endblock %}
 
 
