Add delete_recipe html and logic

--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -6,7 +6,7 @@ Edit recipe
 
 {% block main %}
 <div class="container-fluid">
-    <h3 class="pb-3">Edit recipe</h3>
+    <h3 class="pb-3">Editar receta</h3>
     <form action="/edit_recipe" method="post" class="mb-4">
         <input name="recipe_id" type="hidden" value="{{ recipe[0]['id'] }}">
         <div class="mb-3">
