--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,9 +32,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav me-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/new_recipe">New recipe</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/create_recipe">New recipe</a></li>
                         <li class="nav-item"><a class="nav-link" href="/search">Search</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/sell">Sell</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/create_plan">Create plan</a></li>
                         <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
                         <li class="nav-item"><a class="nav-link" href="/addcash">Add Cash</a></li>
                     </ul>
