--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,7 +26,7 @@
 
         <nav class="navbar navbar-expand-md">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Meal Planner</a>
+                <a class="navbar-brand" href="/">Planned Recipe</a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -35,8 +35,6 @@
                         <li class="nav-item"><a class="nav-link" href="/create_recipe">New recipe</a></li>
                         <li class="nav-item"><a class="nav-link" href="/search">Search</a></li>
                         <li class="nav-item"><a class="nav-link" href="/create_plan">Create plan</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/addcash">Add Cash</a></li>
                     </ul>
                 </div>
             </div>
@@ -53,7 +51,6 @@
             </p>
 
         </footer>
-
         {% block script %}
 
         {% endblock %}
