--- a/templates/create_recipe.html
+++ b/templates/create_recipe.html
@@ -25,26 +25,28 @@ New recipe
                 <label class="visually-hidden" for="autoSizingSelect1">Unit</label>
                 <select class="form-select" id="autoSizingSelect1" name="unit_1">
                     <option selected>Choose unit</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
+                    {% for unit in units %}
+                        <option value="{{unit['name']}}">{{unit["name"]}}</option>
+                    {% endfor %}
                 </select>
             </div>
             <div class="col-auto mb-2">
                 <label class="visually-hidden" for="autoSizingSelect2">Ingredient</label>
                 <select class="form-select" id="autoSizingSelect2" name="ingredient_1">
                     <option selected>Choose ingredient</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
+                    {% for ingredient in ingredients %}
+                        <option value="{{ingredient['name']}}">{{ingredient["name"]}}</option>
+                    {% endfor %}
                 </select>
             </div>
-            <div class="col-auto mb-2">
-                <button type="button" class="btn btn-secondary" id="add-ingredient-button">
+            <!-- <div class="col-auto mb-2">
+                <button type="button" class="btn btn-secondary" >
                     <i class="bi bi-plus-square"></i>
                 </button>
-            </div>
+            </div> -->
         </div>
+
+        <button class="btn btn-info" id="add-ingredient-button">Agregar ingrediente</button>
 
         <div class="mb-3">
             <label for="recipe_instructions" class="form-label">Instructions</label>
@@ -98,7 +100,7 @@ New recipe
         const addButton = document.getElementById('add-ingredient-button');
 
         function ing_code(number) {
-            number += 1;
+            console.log("i es" + i);
             return (
                 `
                 <div class="col-auto mb-2">
@@ -125,7 +127,7 @@ New recipe
                 </div>
                 <div class="col-auto mb-2">
                     <button type="button" class="btn btn-secondary" id="add-ingredient-button">
-                        <i class="bi bi-plus-square"></i>
+                        <i class="bi bi-dash-square"></i>
                     </button>
                 </div>
 
@@ -151,10 +153,9 @@ New recipe
                 div.classList.add("row");
                 div.classList.add("mb-2");
                 console.log("div created")
+                i += 1;
                 div.innerHTML = ing_code(i);
                 console.log("listo innerhtml")
-                // const node = document.createTextNode("This is new.");
-                // para.appendChild(node);
 
                 // Append the new <p> to the form
                 const element = document.querySelector("#ing1");
